--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <div class="container">
       <h1>Primera sección</h1>
       <div class="main-grid">
-        <div class="main-item"></div>
+        <div class="main-item">
+          <img src="images/harvard.jpg" alt="main-image">
+          <h1>Título de main item</h1>
+        </div>
         <div class="item"></div>
         <div class="item"></div>
       </div>
