--- a/index.html
+++ b/index.html
@@ -27,11 +27,26 @@
       <h1>Primera sección</h1>
       <div class="main-grid">
         <div class="main-item">
-          <img src="images/harvard.jpg" alt="main-image">
           <h1>Título de main item</h1>
+          <p>Este es el texto del main item. Tampoco debe ser tan corto.</p>
+          <a href="">Continuar leyendo</a>
         </div>
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="item">
+          <h3>Éste es el título del artículo más importante</h3>
+          <p>
+            Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+            del artículo.
+          </p>
+          <a href="">Continuar leyendo</a>
+        </div>
+        <div class="item">
+          <h3>Título de item secundario</h3>
+          <p>
+            Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+            del artículo.
+          </p>
+          <a href="">Continuar leyendo</a>
+        </div>
       </div>
     </div>
   </section>
