--- a/index.html
+++ b/index.html
@@ -55,9 +55,36 @@
     <div class="container">
       <h1>Segunda sección</h1>
       <div class="subsite-grid">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="item">
+          <h4>Título de item secundario</h4>
+          <p>
+            Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+              del artículo. Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+              del artículo. Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+            del artículo.
+          </p>
+          <a href="">Continuar leyendo</a>
+        </div>
+        <div class="item">
+          <h4>Título de item secundario</h4>
+          <p>
+            Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+              del artículo. Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+              del artículo. Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+            del artículo.
+          </p>
+          <a href="">Continuar leyendo</a>
+        </div>
+        <div class="item">
+          <h4>Título de item secundario</h4>
+          <p>
+              Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+              del artículo. Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+              del artículo. Este es el texto del item secundario. Debe ser un párrafo que muestre un poco del contenido
+            del artículo.
+          </p>
+          <a href="">Continuar leyendo</a>
+        </div>
       </div>
     </div>
   </section>
