Cover and header

--- a/index.html
+++ b/index.html
@@ -13,18 +13,27 @@
     </div>
     <ul>
       <a href="">
-        <li>Opción 1</li>
+        <li>Historia</li>
       </a>
       <a href="">
-        <li>Opción 2</li>
+        <li>Miembros</li>
+      </a>
+      <a href="">
+        <li>Alumnos actuales</li>
+      </a>
+      <a href="">
+        <li>Galería</li>
       </a>
     </ul>
   </header>
-  <section class="cover"></section>
+
+  <section class="cover">
+    <h1>Somos la Asociación Oficial de Ex Alumnos de Harvard</h1>
+  </section>
 
   <section class="horizontal-container">
     <div class="container">
-      <h1>Primera sección</h1>
+      <h1>Últimos eventos</h1>
       <div class="main-grid">
         <div class="main-item">
           <h1>Título de main item</h1>
@@ -53,7 +62,7 @@
 
   <section class="horizontal-container">
     <div class="container">
-      <h1>Segunda sección</h1>
+      <h1>Artículos de la revista</h1>
       <div class="subsite-grid">
         <div class="item">
           <h4>Título de item secundario</h4>
