--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="item">
         <ul class="socials">
           <a href="">
-            <li></li>
+            <li id="linked-in"></li>
           </a>
           <a href="">
             <li></li>
