--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ther Harvard Law School Association of Mexico, A.C.</title>
+  <title>The Harvard Law School Association of Mexico, A.C.</title>
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
