--- a/story.html
+++ b/story.html
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h1>Nuestra historia</h1>
+            <h1 class="section-title">Nuestra historia</h1>
             <p>Al contrario del pensamiento popular, el texto de Lorem Ipsum no es simplemente texto aleatorio.
               Tiene sus raices en una pieza cl´sica de la literatura del Latin, que data del año 45 antes de Cristo,
               haciendo que este adquiera mas de 2000 años de antiguedad. Richard McClintock, un profesor de Latin de
