Members view styles

--- a/members.html
+++ b/members.html
@@ -27,18 +27,43 @@
     </ul>
   </header>
 
-  <section class="horizontal-container">
-    <div class="container">
-      <h1 class="section-title">Miembros de la asociación</h1>
-    </div>
-  </section>
+  <div class="container">
+    <h1 class="section-title">Miembros de la asociación</h1>
+  </div>
 
   <section class="horizontal-container">
     <div class="container">
-      <div class="profile-container">
-        <img src="images/mark-zuckerberg.jpg">
-        <div class="img-back-frame"></div>
+      <div class="row">
+        <div class="profile-container col-md-8">
+            <img src="images/mark-zuckerberg.jpg">
+            <div class="img-back-frame"></div>
+            <div class="profile-info">
+              <h3>Mark Zuckerberg</h3>
+              <h4>Director de la Asociación</h4>
+              <p>
+                Descripción de lo que el director hace en la Asociación.
+                Además una breve historia de lo que ha hecho, dónde ha trabajado
+                y de sus logros.
+              </p>
+            </div>
+          </div>
       </div>
+
+      <div class="row">
+        <div class="profile-container col-md-8">
+            <img src="images/mark-zuckerberg.jpg">
+            <div class="img-back-frame"></div>
+            <div class="profile-info">
+              <h3>Mark Zuckerberg</h3>
+              <h4>Director de la Asociación</h4>
+              <p>
+                Descripción de lo que el director hace en la Asociación.
+                Además una breve historia de lo que ha hecho, dónde ha trabajado
+                y de sus logros.
+              </p>
+            </div>
+          </div>
+        </div>
     </div>
   </section>
 </body>
