--- a/members.html
+++ b/members.html
@@ -27,8 +27,10 @@
     </ul>
   </header>
 
-  <div class="container">
-    <h1 class="section-title">Miembros de la asociación</h1>
+  <div class="horizontal-container">
+    <div class="container">
+      <h1 class="section-title">Miembros de la asociación</h1>
+    </div>
   </div>
 
   <section class="horizontal-container">
@@ -45,6 +47,18 @@
                 Además una breve historia de lo que ha hecho, dónde ha trabajado
                 y de sus logros.
               </p>
+              <ul class="social-media-icons">
+                <a href="">
+                  <li>
+                    <img src="images/linkedin-logo-gray.png" alt="">
+                  </li>
+                </a>
+                <a href="">
+                  <li>
+                    <img src="images/linkedin-logo-gray.png" alt="">
+                  </li>
+                </a>
+              </ul>
             </div>
           </div>
       </div>
@@ -66,4 +80,25 @@
         </div>
     </div>
   </section>
+
+  <footer>
+    <div class="container footer-container">
+      <div class="item">
+        <ul class="socials">
+          <a href="">
+            <li id="linked-in"></li>
+          </a>
+          <a href="">
+            <li></li>
+          </a>
+        </ul>
+      </div>
+      <div class="item">
+        <p>The Harvard Law School Association of Mexico, A.C.</p>
+      </div>
+      <div class="item">
+        <p>contacto@harvardmexico.org</p>
+      </div>
+    </div>
+    </footer>
 </body>
