--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>The Harvard Law School Association of Mexico, A.C.</title>
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <script src="javascripts/jquery.js"></script>
+  <script src="javascripts/main.js"></script>
 </head>
 <body>
   <header>
@@ -25,7 +27,26 @@
         <li>Galería</li>
       </a>
     </ul>
+    <img src="images/hamburger-icon.png" alt="" class="menu-icon">
   </header>
+
+  <aside>
+    <img src="images/close-icon.png" alt="" class="close-icon">
+    <ul>
+      <a href="">
+        <li>Historia</li>
+      </a>
+      <a href="">
+        <li>Miembros</li>
+      </a>
+      <a href="">
+        <li>Alumnos actuales</li>
+      </a>
+      <a href="">
+        <li>Galería</li>
+      </a>
+    </ul>
+  </aside>
 
   <section class="cover">
     <h1>Somos la Asociación Oficial de Ex Alumnos de Harvard</h1>
