Members mobile view

--- a/alumni.html
+++ b/alumni.html
@@ -4,6 +4,8 @@
   <title>The Harvard Law School Association of Mexico, A.C.</title>
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <script src="javascripts/jquery.js"></script>
+  <script src="javascripts/main.js"></script>
 </head>
 <body class="members">
   <header>
@@ -12,68 +14,85 @@
       <h6 class="logo-title">The Harvard Law School Association of Mexico, A.C.</h6>
     </div>
     <ul>
-      <a href="">
+      <a href="story.html">
         <li>Historia</li>
       </a>
-      <a href="">
+      <a href="members.html">
         <li>Miembros</li>
       </a>
-      <a href="">
+      <a href="alumni.html">
         <li>Alumnos actuales</li>
       </a>
       <a href="">
         <li>Galería</li>
       </a>
     </ul>
+    <img src="images/hamburger-icon.png" alt="" id="menu-icon">
   </header>
+
+  <aside>
+    <img src="images/close-icon.png" alt="" class="close-icon">
+    <ul>
+      <a href="story.html">
+        <li>Historia</li>
+      </a>
+      <a href="members.html">
+        <li>Miembros</li>
+      </a>
+      <a href="alumni.html">
+        <li>Alumnos actuales</li>
+      </a>
+      <a href="">
+        <li>Galería</li>
+      </a>
+    </ul>
+  </aside>
 
   
   <section class="horizontal-container">
     <div class="container">
-      <div class="row">
-        <h1 class="section-title">Alumnos actuales</h1>
-        <div class="profile-container col-md-8">
-          <img src="images/mark-zuckerberg.jpg">
-          <div class="img-back-frame"></div>
-          <div class="profile-info">
-            <h3>Mark Zuckerberg</h3>
-            <h4>Director de la Asociación</h4>
-            <p>
-              Descripción de lo que el director hace en la Asociación.
-              Además una breve historia de lo que ha hecho, dónde ha trabajado
-              y de sus logros.
-            </p>
-            <ul class="social-media-icons">
-              <a href="">
-                <li>
-                  <img src="images/linkedin-logo-gray.png" alt="">
-                </li>
-              </a>
-              <a href="">
-                <li>
-                  <img src="images/linkedin-logo-gray.png" alt="">
-                </li>
-              </a>
-            </ul>
-          </div>
+      <h1 class="section-title">Alumnos actuales</h1>
+      <div class="profile-container">
+        <img src="images/mark-zuckerberg.jpg">
+        <div class="img-back-frame"></div>
+        <div class="profile-info">
+          <h3>Mark Zuckerberg</h3>
+          <h4>Director de la Asociación</h4>
+          <p>
+            Descripción de lo que el director hace en la Asociación.
+            Además una breve historia de lo que ha hecho, dónde ha trabajado
+            y de sus logros.
+          </p>
+          <ul class="social-media-icons">
+            <a href="">
+              <li>
+                <img src="images/linkedin-logo-gray.png" alt="">
+              </li>
+            </a>
+            <a href="">
+              <li>
+                <img src="images/linkedin-logo-gray.png" alt="">
+              </li>
+            </a>
+          </ul>
         </div>
       </div>
 
-      <div class="row">
-        <div class="profile-container col-md-8">
-          <img src="images/mark-zuckerberg.jpg">
-          <div class="img-back-frame"></div>
-          <div class="profile-info">
-            <h3>Mark Zuckerberg</h3>
-            <h4>Director de la Asociación</h4>
-            <p>
-              Descripción de lo que el director hace en la Asociación.
-              Además una breve historia de lo que ha hecho, dónde ha trabajado
-              y de sus logros.
-            </p>
-          </div>
+
+      <div class="profile-container">
+        <img src="images/mark-zuckerberg.jpg">
+        <div class="img-back-frame"></div>
+        <div class="profile-info">
+          <h3>Mark Zuckerberg</h3>
+          <h4>Director de la Asociación</h4>
+          <p>
+            Descripción de lo que el director hace en la Asociación.
+            Además una breve historia de lo que ha hecho, dónde ha trabajado
+            y de sus logros.
+          </p>
         </div>
       </div>
+
     </div>
 
 
