--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
       <h6 class="logo-title">The Harvard Law School Association of Mexico, A.C.</h6>
     </div>
     <ul>
-      <a href="">
+      <a href="story.html">
         <li>Historia</li>
       </a>
-      <a href="">
+      <a href="members.html">
         <li>Miembros</li>
       </a>
-      <a href="">
+      <a href="alumni.html">
         <li>Alumnos actuales</li>
       </a>
       <a href="">
         <li>Galería</li>
       </a>
     </ul>
-    <img src="images/hamburger-icon.png" alt="" class="menu-icon">
+    <img src="images/hamburger-icon.png" alt="" id="menu-icon">
   </header>
 
   <aside>
     <img src="images/close-icon.png" alt="" class="close-icon">
     <ul>
-      <a href="">
+      <a href="story.html">
         <li>Historia</li>
       </a>
-      <a href="">
+      <a href="members.html">
         <li>Miembros</li>
       </a>
-      <a href="">
+      <a href="alumni.html">
         <li>Alumnos actuales</li>
       </a>
       <a href="">
