--- a/magazine.html
+++ b/magazine.html
@@ -4,6 +4,8 @@
   <title>The Harvard Law School Association of Mexico, A.C.</title>
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <script src="javascripts/jquery.js"></script>
+  <script src="javascripts/main.js"></script>
 </head>
 <body>
   <header>
@@ -12,20 +14,39 @@
       <h6 class="logo-title">The Harvard Law School Association of Mexico, A.C.</h6>
     </div>
     <ul>
-      <a href="">
+      <a href="story.html">
         <li>Historia</li>
       </a>
-      <a href="">
+      <a href="members.html">
         <li>Miembros</li>
       </a>
-      <a href="">
+      <a href="alumni.html">
         <li>Alumnos actuales</li>
       </a>
       <a href="">
         <li>Galería</li>
       </a>
     </ul>
+    <img src="images/hamburger-icon.png" alt="" id="menu-icon">
   </header>
+
+  <aside>
+    <img src="images/close-icon.png" alt="" class="close-icon">
+    <ul>
+      <a href="story.html">
+        <li>Historia</li>
+      </a>
+      <a href="members.html">
+        <li>Miembros</li>
+      </a>
+      <a href="alumni.html">
+        <li>Alumnos actuales</li>
+      </a>
+      <a href="">
+        <li>Galería</li>
+      </a>
+    </ul>
+  </aside>
 
   <section class="horizontal-container">
     <div class="container">
