Correct mobile header

--- a/index.html
+++ b/index.html
@@ -6,25 +6,38 @@
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <script src="javascripts/jquery.js"></script>
   <script src="javascripts/main.js"></script>
+
+  <meta name="HandheldFriendly" content="true">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <meta http-equiv="X-UA-Compatible" content="IE=11">
+  <meta charset="utf-8">
 </head>
 <body>
   <header>
-    <div class="logo">
+    <a class="logo" href="index.html">
       <div class="image"></div>
-      <h6 class="logo-title">The Harvard Law School Association of Mexico, A.C.</h6>
-    </div>
+      <div class="logo-title-grid">
+        <p class="logo-title">The</p>
+        <h5>
+          HARVARD LAW SCHOOL
+        </h5>
+        <p>
+          Association of Mexico
+        </p>
+      </div>
+    </a>
     <ul>
       <a href="story.html">
-        <li>Historia</li>
+        <li>HISTORIA</li>
       </a>
       <a href="members.html">
-        <li>Miembros</li>
+        <li>MIEMBROS</li>
       </a>
       <a href="alumni.html">
-        <li>Alumnos actuales</li>
+        <li>ALUMNOS ACTUALES</li>
       </a>
       <a href="">
-        <li>Galería</li>
+        <li>GALERÍA</li>
       </a>
     </ul>
     <img src="images/hamburger-icon.png" alt="" id="menu-icon">
@@ -33,17 +46,30 @@
   <aside>
     <img src="images/close-icon.png" alt="" class="close-icon">
     <ul>
+      <a href="index.html">
+        <li class="sidebar-logo">
+          <div class="logo-title-grid">
+            <p class="logo-title">The</p>
+            <h5>
+              HARVARD LAW SCHOOL
+            </h5>
+            <p>
+              Association of Mexico
+            </p>
+          </div>
+        </li>
+      </a>
       <a href="story.html">
-        <li>Historia</li>
+        <li>HISTORIA</li>
       </a>
       <a href="members.html">
-        <li>Miembros</li>
+        <li>MIEMBROS</li>
       </a>
       <a href="alumni.html">
-        <li>Alumnos actuales</li>
+        <li>ALUMNOS ACTUALES</li>
       </a>
       <a href="">
-        <li>Galería</li>
+        <li>GALERÍA</li>
       </a>
     </ul>
   </aside>
@@ -59,7 +85,7 @@
         <div class="main-item">
           <h1>Título de main item</h1>
           <p>Este es el texto del main item. Tampoco debe ser tan corto.</p>
-          <a href="">Continuar leyendo</a>
+          <a href="event.html">Continuar leyendo</a>
         </div>
         <div class="item">
           <h3>Éste es el título del artículo más importante</h3>
@@ -121,19 +147,24 @@
 
   <footer>
     <div class="container footer-container">
+      <div class="logo-title-grid item">
+        <p class="logo-title">The</p>
+        <h5>
+          HARVARD LAW SCHOOL
+        </h5>
+        <p>
+          Association of Mexico
+        </p>
+      </div>
+
       <div class="item">
         <ul class="socials">
           <a href="">
             <li id="linked-in"></li>
           </a>
-          <a href="">
-            <li></li>
-          </a>
         </ul>
       </div>
-      <div class="item">
-        <p>The Harvard Law School Association of Mexico, A.C.</p>
-      </div>
+      
       <div class="item">
         <p>contacto@harvardmexico.org</p>
       </div>
