--- a/story.html
+++ b/story.html
@@ -6,25 +6,38 @@
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <script src="javascripts/jquery.js"></script>
   <script src="javascripts/main.js"></script>
+
+  <meta name="HandheldFriendly" content="true">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <meta http-equiv="X-UA-Compatible" content="IE=11">
+  <meta charset="utf-8">
 </head>
 <body class="story">
   <header>
-    <div class="logo">
+    <a class="logo" href="index.html">
       <div class="image"></div>
-      <h6 class="logo-title">The Harvard Law School Association of Mexico, A.C.</h6>
-    </div>
+      <div class="logo-title-grid">
+        <p class="logo-title">The</p>
+        <h5>
+          HARVARD LAW SCHOOL
+        </h5>
+        <p>
+          Association of Mexico
+        </p>
+      </div>
+    </a>
     <ul>
       <a href="story.html">
-        <li>Historia</li>
+        <li>HISTORIA</li>
       </a>
       <a href="members.html">
-        <li>Miembros</li>
+        <li>MIEMBROS</li>
       </a>
       <a href="alumni.html">
-        <li>Alumnos actuales</li>
+        <li>ALUMNOS ACTUALES</li>
       </a>
       <a href="">
-        <li>Galería</li>
+        <li>GALERÍA</li>
       </a>
     </ul>
     <img src="images/hamburger-icon.png" alt="" id="menu-icon">
@@ -34,19 +47,19 @@
     <img src="images/close-icon.png" alt="" class="close-icon">
     <ul>
       <a href="story.html">
-        <li>Historia</li>
+        <li>HISTORIA</li>
       </a>
       <a href="members.html">
-        <li>Miembros</li>
+        <li>MIEMBROS</li>
       </a>
       <a href="alumni.html">
-        <li>Alumnos actuales</li>
+        <li>ALUMNOS ACTUALES</li>
       </a>
       <a href="">
-        <li>Galería</li>
+        <li>GALERÍA</li>
       </a>
     </ul>
-    </aside>
+  </aside>
 
   <section class="cover"></section>
 
