--- a/alumni.html
+++ b/alumni.html
@@ -46,6 +46,19 @@
   <aside>
     <img src="images/close-icon.png" alt="" class="close-icon">
     <ul>
+      <a href="index.html">
+        <li class="sidebar-logo">
+          <div class="logo-title-grid">
+            <p class="logo-title">The</p>
+            <h5>
+              HARVARD LAW SCHOOL
+            </h5>
+            <p>
+              Association of Mexico
+            </p>
+          </div>
+        </li>
+      </a>
       <a href="story.html">
         <li>HISTORIA</li>
       </a>
@@ -67,7 +80,6 @@
       <h1 class="section-title">Alumnos actuales</h1>
       <div class="profile-container">
         <img src="images/mark-zuckerberg.jpg">
-        <div class="img-back-frame"></div>
         <div class="profile-info">
           <h3>Mark Zuckerberg</h3>
           <h4>Director de la Asociación</h4>
@@ -94,7 +106,6 @@
 
       <div class="profile-container">
         <img src="images/mark-zuckerberg.jpg">
-        <div class="img-back-frame"></div>
         <div class="profile-info">
           <h3>Mark Zuckerberg</h3>
           <h4>Director de la Asociación</h4>
@@ -110,7 +121,7 @@
 
 
   </section>
-  <section class="horizontal-container row">
+  <section class="horizontal-container">
     <div class="container">
       <div class="profile-grid">
         <div class="profile-cell">
@@ -195,19 +206,24 @@
 
   <footer>
     <div class="container footer-container">
+      <div class="logo-title-grid item">
+        <p class="logo-title">The</p>
+        <h5>
+          HARVARD LAW SCHOOL
+        </h5>
+        <p>
+          Association of Mexico
+        </p>
+      </div>
+
       <div class="item">
         <ul class="socials">
           <a href="">
             <li id="linked-in"></li>
           </a>
-          <a href="">
-            <li></li>
-          </a>
         </ul>
       </div>
-      <div class="item">
-        <p>The Harvard Law School Association of Mexico, A.C.</p>
-      </div>
+      
       <div class="item">
         <p>contacto@harvardmexico.org</p>
       </div>
