--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
           <a href="">Continuar leyendo</a>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm-4 offset-sm-4 text-center mt-5">
+          <a href="magazine.html" class="more-button">
+            Ver más artículos
+          </a>
+        </div>
+      </div>
     </div>
   </section>
 
