--- a/magazine.html
+++ b/magazine.html
@@ -46,6 +46,19 @@
   <aside>
     <img src="images/close-icon.png" alt="" class="close-icon">
     <ul>
+      <a href="index.html">
+        <li class="sidebar-logo">
+          <div class="logo-title-grid">
+            <p class="logo-title">The</p>
+            <h5>
+              HARVARD LAW SCHOOL
+            </h5>
+            <p>
+              Association of Mexico
+            </p>
+          </div>
+        </li>
+      </a>
       <a href="story.html">
         <li>HISTORIA</li>
       </a>
@@ -115,19 +128,24 @@
 
   <footer>
     <div class="container footer-container">
+      <div class="logo-title-grid item">
+        <p class="logo-title">The</p>
+        <h5>
+          HARVARD LAW SCHOOL
+        </h5>
+        <p>
+          Association of Mexico
+        </p>
+      </div>
+
       <div class="item">
         <ul class="socials">
           <a href="">
             <li id="linked-in"></li>
           </a>
-          <a href="">
-            <li></li>
-          </a>
         </ul>
       </div>
-      <div class="item">
-        <p>The Harvard Law School Association of Mexico, A.C.</p>
-      </div>
+      
       <div class="item">
         <p>contacto@harvardmexico.org</p>
       </div>
