--- a/gallery.html
+++ b/gallery.html
@@ -4,15 +4,18 @@
   <title>The Harvard Law School Association of Mexico, A.C.</title>
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <script src="javascripts/jquery.js"></script>
   <script src="javascripts/main.js"></script>
+
 
   <meta name="HandheldFriendly" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=11">
   <meta charset="utf-8">
 </head>
-<body class="members">
+<body>
   <header>
     <a class="logo" href="index.html">
       <div class="image"></div>
@@ -73,50 +76,33 @@
       </a>
     </ul>
   </aside>
-  
-  <section class="horizontal-container">
+
+  <div class="horizontal-container">
     <div class="container">
-      <h1 class="section-title">Miembros de la asociación</h1>
-
-      <div class="profile-container">
-        <img src="images/mark-zuckerberg.jpg">
-        <div class="profile-info">
-          <h3>Mark Zuckerberg</h3>
-          <h4>Director de la Asociación</h4>
-          <p>
-            Descripción de lo que el director hace en la Asociación.
-            Además una breve historia de lo que ha hecho, dónde ha trabajado
-            y de sus logros.
-          </p>
-          <ul class="social-media-icons">
-            <a href="">
-              <li>
-                <img src="images/linkedin-logo-gray.png" alt="">
-              </li>
-            </a>
-            <a href="">
-              <li>
-                <img src="images/linkedin-logo-gray.png" alt="">
-              </li>
-            </a>
-          </ul>
+      <h1 class="section-title">Galería de imágenes</h1>
+      <div class="image-gallery">
+        <div class="prev-button"></div>
+        <div class="next-button"></div>
+        <div class="image-gallery__thumb">
+          <img src="images/harvard1.jpg" alt="">
+          <img src="images/harvard2.jpg" alt="">
+          <img src="images/harvard3.jpeg" alt="">
+          <img src="images/harvard1.jpg" alt="">
+          <img src="images/harvard2.jpg" alt="">
+          <img src="images/harvard3.jpeg" alt="">
         </div>
-      </div>
-
-      <div class="profile-container">
-        <img src="images/mark-zuckerberg.jpg">
-        <div class="profile-info">
-          <h3>Mark Zuckerberg</h3>
-          <h4>Director de la Asociación</h4>
-          <p>
-            Descripción de lo que el director hace en la Asociación.
-            Además una breve historia de lo que ha hecho, dónde ha trabajado
-            y de sus logros.
-          </p>
+        </div>
+        <div class="image-gallery__img-container">
+          <img src="images/harvard1.jpg" alt="">
+          <img src="images/harvard2.jpg" alt="">
+          <img src="images/harvard3.jpeg" alt="">
+          <img src="images/harvard1.jpg" alt="">
+          <img src="images/harvard2.jpg" alt="">
+          <img src="images/harvard3.jpeg" alt="">
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
   <footer>
     <div class="container footer-container">
@@ -143,4 +129,7 @@
       </div>
     </div>
   </footer>
+
+  <script type="text/javascript" src="slick/slick.min.js"></script>
 </body>
+</html>
