--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>The Harvard Law School Association of Mexico, A.C.</title>
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/animate.css">
   <script src="javascripts/jquery.js"></script>
   <script src="javascripts/main.js"></script>
 
@@ -80,7 +81,7 @@
 
   <section class="horizontal-container">
     <div class="container">
-      <h1>Últimos eventos</h1>
+      <h1 id="events-title">Últimos eventos</h1>
       <div class="main-grid">
         <div class="main-item">
           <h1>Título de main item</h1>
@@ -109,7 +110,7 @@
 
   <section class="horizontal-container">
     <div class="container">
-      <h1>Artículos de la revista</h1>
+      <h1 id="articles-title">Artículos de la revista</h1>
       <div class="subsite-grid">
         <div class="item">
           <h4>Título de item secundario</h4>
