--- a/gallery.html
+++ b/gallery.html
@@ -131,5 +131,6 @@
   </footer>
 
   <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script src="javascripts/slick-init.js"></script>
 </body>
 </html>
