Correctly renames files

--- a/history.html
+++ b/history.html
@@ -27,13 +27,13 @@
       </div>
     </a>
     <ul>
-      <a href="story.html">
+      <a href="history.html">
         <li>HISTORIA</li>
       </a>
       <a href="members.html">
         <li>MIEMBROS</li>
       </a>
-      <a href="alumni.html">
+      <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
       <a href="">
@@ -59,13 +59,13 @@
           </div>
         </li>
       </a>
-      <a href="story.html">
+      <a href="history.html">
         <li>HISTORIA</li>
       </a>
       <a href="members.html">
         <li>MIEMBROS</li>
       </a>
-      <a href="alumni.html">
+      <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
       <a href="">
