--- a/event.html
+++ b/event.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Story - The Harvard Law School Association of Mexico, A.C.</title>
+  <title>History - The Harvard Law School Association of Mexico, A.C.</title>
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <script src="javascripts/jquery.js"></script>
@@ -27,13 +27,13 @@
       </div>
     </a>
     <ul>
-      <a href="story.html">
+      <a href="history.html">
         <li>HISTORIA</li>
       </a>
       <a href="members.html">
         <li>MIEMBROS</li>
       </a>
-      <a href="alumni.html">
+      <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
       <a href="">
@@ -59,13 +59,13 @@
           </div>
         </li>
       </a>
-      <a href="story.html">
+      <a href="history.html">
         <li>HISTORIA</li>
       </a>
       <a href="members.html">
         <li>MIEMBROS</li>
       </a>
-      <a href="alumni.html">
+      <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
       <a href="">
