--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       </div>
     </a>
     <ul>
-      <a href="story.html">
+      <a href="history.html">
         <li>HISTORIA</li>
       </a>
       <a href="members.html">
         <li>MIEMBROS</li>
       </a>
-      <a href="alumni.html">
+      <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
       <a href="">
@@ -60,13 +60,13 @@
           </div>
         </li>
       </a>
-      <a href="story.html">
+      <a href="history.html">
         <li>HISTORIA</li>
       </a>
       <a href="members.html">
         <li>MIEMBROS</li>
       </a>
-      <a href="alumni.html">
+      <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
       <a href="">
