--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
       <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
-      <a href="">
+      <a href="gallery.html">
         <li>GALERÍA</li>
       </a>
     </ul>
@@ -71,7 +71,7 @@
       <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
-      <a href="">
+      <a href="gallery.html">
         <li>GALERÍA</li>
       </a>
     </ul>
@@ -118,7 +118,7 @@
 
       <div class="item">
         <ul class="socials">
-          <a href="">
+          <a href="gallery.html">
             <li id="linked-in"></li>
           </a>
         </ul>
