--- a/history.html
+++ b/history.html
@@ -36,7 +36,7 @@
       <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
-      <a href="">
+      <a href="gallery.html">
         <li>GALERÍA</li>
       </a>
     </ul>
@@ -68,7 +68,7 @@
       <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
-      <a href="">
+      <a href="gallery.html">
         <li>GALERÍA</li>
       </a>
     </ul>
@@ -115,7 +115,7 @@
 
       <div class="item">
         <ul class="socials">
-          <a href="">
+          <a href="gallery.html">
             <li id="linked-in"></li>
           </a>
         </ul>
