--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
-      <a href="">
+      <a href="gallery.html">
         <li>GALERÍA</li>
       </a>
     </ul>
@@ -69,7 +69,7 @@
       <a href="students.html">
         <li>ALUMNOS ACTUALES</li>
       </a>
-      <a href="">
+      <a href="gallery.html">
         <li>GALERÍA</li>
       </a>
     </ul>
@@ -172,7 +172,7 @@
           </a>
         </ul>
       </div>
-      
+
       <div class="item">
         <p>contacto@harvardmexico.org</p>
       </div>
