Fixes the sidemenu animations

--- a/history.html
+++ b/history.html
@@ -4,6 +4,7 @@
   <title>Story - The Harvard Law School Association of Mexico, A.C.</title>
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/animate.css">
   <script src="javascripts/jquery.js"></script>
   <script src="javascripts/main.js"></script>
 
