--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="styles/animate.css">
   <script src="javascripts/jquery.js"></script>
   <script src="javascripts/main.js"></script>
 
